--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -25,6 +25,10 @@
             android:name=".PlayerActivity"
             android:label="@string/app_name">
         </activity>
+        <activity
+            android:name=".ArtistActivity"
+            android:label="@string/app_name">
+        </activity>
     </application>
 
 </manifest>
