quasi finito il player

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,10 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="com.spotimyandroid">
+    package="com.spotimyandroid"
+     >
 
     <uses-permission android:name="android.permission.INTERNET" />
 
     <application
+        android:name=".resources.ApplicationSupport"
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
@@ -13,6 +15,7 @@
         android:theme="@style/AppTheme">
         <activity
             android:name=".MainActivity"
+            android:screenOrientation="portrait"
             android:label="@string/app_name">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -23,10 +26,12 @@
 
         <activity
             android:name=".PlayerActivity"
+            android:screenOrientation="portrait"
             android:label="@string/app_name">
         </activity>
         <activity
             android:name=".ArtistActivity"
+            android:screenOrientation="portrait"
             android:label="@string/app_name">
         </activity>
     </application>
