--- a/app/build.gradle
+++ b/app/build.gradle
@@ -30,5 +30,6 @@ dependencies {
     androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.1'
     //my dependencies
     compile 'com.android.volley:volley:1.1.0'
+    compile 'de.hdodenhof:circleimageview:2.2.0'
 
 }
