--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -6,7 +6,7 @@
     <uses-permission android:name="android.permission.INTERNET" />
 
     <application
-        android:name=".resources.ApplicationSupport"
+        android:name=".utils.ApplicationSupport"
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
@@ -31,6 +31,11 @@
         </activity>
         <activity
             android:name=".ArtistActivity"
+            android:screenOrientation="portrait"
+            android:label="@string/app_name">
+        </activity>
+        <activity
+            android:name=".AlbumActivity"
             android:screenOrientation="portrait"
             android:label="@string/app_name">
         </activity>
