--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -39,6 +39,11 @@
             android:screenOrientation="portrait"
             android:label="@string/app_name">
         </activity>
+        <activity
+            android:name=".SettingsActivity"
+            android:screenOrientation="portrait"
+            android:label="@string/app_name">
+        </activity>
     </application>
 
 </manifest>
