--- a/app/build.gradle
+++ b/app/build.gradle
@@ -35,8 +35,9 @@ dependencies {
     androidTestImplementation 'com.android.support.test:runner:1.0.1'
     androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.1'
     //my dependencies
-    compile 'com.android.volley:volley:1.1.0'
-    compile 'de.hdodenhof:circleimageview:2.2.0'
-    compile 'com.github.bumptech.glide:glide:3.6.1'
+    implementation 'com.android.volley:volley:1.1.0'
+    implementation 'de.hdodenhof:circleimageview:2.2.0'
+    implementation 'com.github.bumptech.glide:glide:3.6.1'
+    implementation "com.github.TorrentStream:TorrentStream-Android:2.5.0"
 
 }
