--- a/app/build.gradle
+++ b/app/build.gradle
@@ -28,10 +28,8 @@ repositories {
 
 dependencies {
     implementation fileTree(dir: 'libs', include: ['*.jar'])
-//    implementation 'com.android.support:appcompat-v7:26.1.0'
     implementation 'com.android.support:appcompat-v7:27.0.2'
     implementation 'com.android.support:design:27.0.2'
-//    implementation 'com.android.support:design:26.1.0'
     implementation 'com.android.support.constraint:constraint-layout:1.0.2'
 //    implementation 'com.android.support:support-vector-drawable:26.1.0'
     testImplementation 'junit:junit:4.12'
@@ -43,5 +41,7 @@ dependencies {
     implementation 'com.github.bumptech.glide:glide:3.6.1'
     implementation 'com.spotify.android:auth:1.1.0'
     implementation 'com.github.kaaes:spotify-web-api-android:0.4.1'
+    implementation 'org.jsoup:jsoup:1.11.2'
+    implementation "com.github.se-bastiaan:TorrentStream-Android:2.1.0"
 
 }
