--- a/app/build.gradle
+++ b/app/build.gradle
@@ -43,5 +43,6 @@ dependencies {
     implementation 'com.github.kaaes:spotify-web-api-android:0.4.1'
     implementation 'org.jsoup:jsoup:1.11.2'
     implementation "com.github.se-bastiaan:TorrentStream-Android:2.1.0"
+    implementation 'com.google.code.gson:gson:2.7'
 
 }
